[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/menu_start.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/gomarice_no_continue.ttf"

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = SubResource( 5 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 35.0
content_margin_right = 35.0
content_margin_top = 30.0
content_margin_bottom = 30.0
bg_color = Color( 0.490196, 0.490196, 0.490196, 1 )
border_width_left = 10
shadow_color = Color( 0.180392, 0.180392, 0.180392, 0.054902 )
shadow_size = 10
shadow_offset = Vector2( 0, 20 )

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 6 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = null
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.133333, 0.717647, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.054902, 0.784314, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.831373, 0.235294, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.776471, 0.0980392, 0.831373, 1 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Difficulties" type="VBoxContainer" parent="."]
margin_right = 186.0
margin_bottom = 480.0
theme = SubResource( 4 )
custom_constants/separation = 10

[node name="easy" type="Button" parent="Difficulties"]
use_parent_material = true
margin_right = 186.0
margin_bottom = 96.0
focus_neighbour_top = NodePath("../lunatic")
mouse_filter = 2
custom_constants/hseparation = 0
custom_styles/focus = SubResource( 7 )
button_mask = 0
text = "Easy"

[node name="normal" type="Button" parent="Difficulties"]
use_parent_material = true
margin_top = 106.0
margin_right = 186.0
margin_bottom = 202.0
custom_styles/focus = SubResource( 8 )
button_mask = 0
text = "Normal"

[node name="hard" type="Button" parent="Difficulties"]
use_parent_material = true
margin_top = 212.0
margin_right = 186.0
margin_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/focus = SubResource( 9 )
button_mask = 0
text = "Hard"

[node name="lunatic" type="Button" parent="Difficulties"]
margin_top = 318.0
margin_right = 186.0
margin_bottom = 414.0
focus_neighbour_bottom = NodePath("../easy")
custom_styles/focus = SubResource( 10 )
button_mask = 0
text = "Lunatic"

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="focus_entered" from="Difficulties/easy" to="." method="_on_easy_focus_entered"]
[connection signal="focus_entered" from="Difficulties/normal" to="." method="_on_normal_focus_entered"]
[connection signal="focus_entered" from="Difficulties/hard" to="." method="_on_hard_focus_entered"]
[connection signal="focus_entered" from="Difficulties/lunatic" to="." method="_on_lunatic_focus_entered"]
